2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/remote.cc: Remove call to interruptProgram() when handling a 'g'
	packet. This was accidently committed and should not have been since
	it causes the jtagice box to corrupt the program counter. Not good.

2003-06-11  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/jtagio.cc: Remove check failure for jtag ice HW version.
	* src/remote.cc: Fix handling the 'M' command from GDB to allow for
	odd addresses and lengths.

2003-06-05  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for intl library since linking to bfd may
	require it (this affects cygwin). [Thanks Colid O'Flynn for reporting
	this.]

2003-05-04  Theodore A. Roth  <troth@openavr.org>

	* src/jtagprog.cc: Speed up programming the flash by skipping pages
	that are all ones.
	[Contributed by Alan Willis <willisa@erols.com>.]

2003-05-04  Nils Kristian Strom  <nilsst@omegav.ntnu.no>

	* src/main.cc: Allow all programmer-operations (erase device,
	write memory, write fuses, write lockbits) in one pass.

2003-05-04  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for libbfd and libiberty, complain if either is
	missing.
	Bump version.
	* src/jtagio.cc: When opening the jtagice device, give a more helpful 
	failure message.

2003-05-04  Nils Kristian Strom  <nilsst@omegav.ntnu.no>

	* src/jtag.h:
	* src/jtagprog.cc:
	* src/jtagrw.cc:
	Use the bfd library for handling multiple input file formats.

2003-05-01  Theodore A. Roth  <troth@openavr.org>

	* src/jtagrw.cc: Fix byte order problem when specifying fuses bytes 
	on the command line.

2003-04-20  Theodore A. Roth  <troth@openavr.org>

	* AUTHORS: Fix a typo.
	* INSTALL-FROM-CVS: Add detailed description about using the proper
	versions of autoconf and automake.
	* configure.ac: Ran autoscan to generate this file to check for more
	potential portability problem points.