@@ -1,5 +1,14 @@
 2003-06-12  Theodore A. Roth  <troth@openavr.org>
 
+	* src/jtagrw.cc (jtagWrite): Print debug message if addr or length is
+	odd.
+	* src/remote.cc (reportStatusExtended): New function for replying with
+	a 'T' packet instead of an 'S' packet.
+	Use new function whenever a breakpoint is hit from a step or continue
+	command from gdb.
+
+2003-06-12  Theodore A. Roth  <troth@openavr.org>
+
 	* configure.ac: Bump version.
 	* src/remote.cc: Remove call to interruptProgram() when handling a 'g'
 	packet. This was accidently committed and should not have been since
